# Speedometer_Group_Project

./: CMakeLists.txt  README.md
BIT_PRACTICE/: functions.h  main  main.cpp
desktop/client/: main.cpp
desktop/client/include/: canvas.h  comservice.h  serialservice.h  tcpservice.h  uartservice.h  window.h
desktop/client/src/: canvas.cpp  comservice.cpp  serialservice.cpp  tcpservice.cpp  uartservice.cpp  window.cpp
desktop/server/: main.cpp
desktop/server/include/: comservice.h  serialservice.h  tcpservice.h  window.h
desktop/server/src/: comservice.cpp  serialservice.cpp  tcpservice.cpp  window.cpp
esp32/client/: platformio.ini
esp32/client/src/: main.cpp
esp32/server/: platformio.ini
esp32/server/src/: main.cpp
shared/: hasmap.h  setting.h
